src/objects/hed__Course_Offering__c.object
<CustomObject>
    <description>Joins Courses and Terms to contain information related to a single occurrence of a course.</description>
    <fields>
        <fullName>hed__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Course__c</fullName>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Facility associated with the Course Offering.</description>
        <inlineHelpText>The Facility associated with the Course Offering.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>hed__Facility__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Courses_Taught</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Section_ID__c</fullName>
        <label>Section ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Term__c</fullName>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__Time_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Block</label>
        <referenceTo>hed__Time_Block__c</referenceTo>
        <relationshipLabel>Time Blocks</relationshipLabel>
        <relationshipName>Time_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course Offering</label>
    <listViews>
        <fullName>Spring_2016_Courses</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>hed__Term__c</field>
            <operation>equals</operation>
            <value>Spring 2016</value>
        </filters>
        <label>Spring 2016 Courses</label>
    </listViews>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Offering ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>